crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__reasoning_sheet_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"Thinking  j/k · pgup/pgdn · g/G · / to search · esc                             "
"                                                                                "
"The manifest first, because the lockfile only says what the manifest already    "
"asked for.                                                                      "
"                                                                                "
"Then the crate map, which is the one place the layering is written down.        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
