crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__rewind_picker_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> run the tests                                                                 "
"                                                                                "
"⏺ All 33 pass.                                                                  "
"                                                                                "
"  • `wrap` is done                                                              "
"Rewind to                                                                       "
"  now write me a note and run the tests · 1 item                                "
"❯ run the tests · 2 items                                                       "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
